added code to HTML file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,37 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>I have learned how to create bullet points and headers using HTML</li>
+          <li>I have learned that the head holds the meta and defines the data</li>
+        </ul>
+   </section>
+
+   <section class="card" id="css-section">
+        <h2>CSS</h2>
+    <ul>
+        <li>I have learned CSS is the style and what the user will see when they interact with the web application</li>
+        <li>I have learened that CSS is how animation and format is shown and that it can be easily altered without changing too much code</li>
+    </ul>
+   </section>
+
+   <section class="card" id="git-section">
+    <h2>GIT</h2>
+        <ul>
+          <li>I have learned that git status let's us know what branch we are on</li>
+          <li>I have learned that GIT lets you save code and the history of what has been changed</li>
+        </ul>
+   </section>
+
+   <section class="card" id="javascript-section">
+    <h2>JAVASCRIPT</h2>
+        <ul>
+          <li>I have learned that Java is how the users interact with the web application</li>
+          <li>I have learned that Java is a programming language</li>
+        </ul>
+   </section>
     </main>
 
     <footer>
